# fissure-voice-agent-python

./: .gitignore  ARCHITECTURE_OVERVIEW.md  BEST_PRACTICES.md  CLAUDE.md  DYNAMIC_AGENT_ARCHITECTURE.md  DYNAMIC_AGENT_SUMMARY.md  FRONTEND_INTEGRATION_GUIDE.md  IMPLEMENTATION_GUIDE.md  MULTIPLE_AGENT_TYPES.md  README.md  USER_DATA_AND_SUMMARIES.md  output.out  pyproject.toml
examples/: agent_configurations.py  create_custom_agent.py  dynamic_agent_entrypoint.py  migration_script.py  multi_agent_worker.py  setup_agents.py  user_data_session_example.py
src/: agent.py  api.py  base_agent.py
src/agents/: __init__.py  base_agent.py  conversation_summary.py  session_storage.py  user_data.py
src/api/: __init__.py  admin_api.py
src/interview_agent/mongodb_handler/: __init__.py  base.py  connection_args.py  mongodb_handler.py  response.py
src/interview_agent/mongodb_handler/tests/: test_mongodb_handler.py
src/interview_agent/mongodb_handler/utils/: __init__.py  mongodb_ast.py  mongodb_parser.py  mongodb_query.py  mongodb_render.py
src/interview_agent/prompts/: pte_interview.yaml
src/interview_agent/utilities/: aws_egress.py  log.py  prewarm.py  prompt_loader.py  rpc.py  setup_langfuse.py  structured_output.py  user_details.py
src/orchestrator/: __init__.py  agent_factory.py  configuration_store.py  session_manager.py
